2008-01-29  Jürg Billeter  <j@bitron.ch>

	* vala/valadatatype.vala: fix crash on invalid code, fixes bug 512306

2008-01-29  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi: enhance GError binding

2008-01-29  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/libsoup-2.2/: fix SoupDataBuffer binding

	* vapi/libsoup-2.2.vapi: regenerated

2008-01-29  Jürg Billeter  <j@bitron.ch>

	* vapigen/valagidlparser.vala: support transfer_ownership attribute
	  for function parameters

	* vapi/packages/libsoup-2.2/: fix soup_session_queue_message binding

	* vapi/libsoup-2.2.vapi: regenerated

2008-01-28  Jürg Billeter  <j@bitron.ch>

	* vala/valainterfacewriter.vala: support [NoWrapper] attribute for
	  virtual methods

2008-01-28  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegenerator.vala: remove unnecessary if statement

2008-01-27  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegeneratorinvocationexpression.vala,
	  gobject/valaccodegeneratormemberaccess.vala: fix struct pointer
	  member access

	* tests/Makefile.am, tests/pointers.vala, tests/pointers.exp: test
	  struct pointers

2008-01-27  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala: fix critical when using normal member
	  access on pointers

2008-01-27  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi: fix GValue binding

2008-01-27  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi: bind message output functions

2008-01-27  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegenerator.vala: report error instead of warning when
	  trying to implicitly copy non-reference counted object

2008-01-27  Raffaele Sandrini  <raffaele@sandrini.ch>

	* gobject/valaccodegeneratorsignal.vala: fix regression introduced
	  with libgee regarding marshaller generation

2008-01-27  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi: complete GList and GSList bindings

2008-01-26  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gstreamer-audio-0.10/,
	  vapi/packages/gstreamer-fft-0.10/,